Thu Nov 18 10:27:35 EST 1999 Ben Collins <bcollins@debian.org>

  * utils/start-stop-daemon.c: Added ability for user.group arg to
    --chuid. Also, always call initgroups() when using --chuid.
  * utils/start-stop-daemon.8: Document above change, also add note to the
    --make-pidfile option concerning its problem with daemons that fork

Fri Nov 12 21:21:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Rename japanses translation to just jp

Thu Nov 11 20:14:02 EST 1999 Ben Collins <bcollins@debian.org>

  * lib/tarfn.c: add braces around if to fix compiler warning

Fri Nov 12 01:47:24 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Correct names for build-depency names according to Bug# 49792
  * .. and for dpkg-source.pl as well

Mon Nov  8 17:45:50 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Add support for enhances to dpkg and dselect. dselect doesn't
    take any action on it yet though

Tue Nov  2 20:19:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Fix some language mixups: our Polish translation was actually
    Czech, and we somehow lost the real Polish text..

Mon Nov  1 23:25:32 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Add partial Russian translation from Michael Sobolev <mss@transas.com>

Sat Oct 30 16:22:00 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Fix file conflict between dpkg-dev, dpkg
  * Move changelog.manual to dpkg-doc

Sat Oct 30 03:31:30 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Make it all build again
  * retro-actively add this ChangeLog entry
  * Removed bogus po/dpkg.po file
  * No longer translater internal errors.. we want to see the English text
    in bugreports

Fri Oct 29 20:16:43 EDT 1999 Ben Collins <bcollins@debian.org>

  * po/update.sh: make sure we only update when there are changes,
    also autodetect list of .po files we need to change
  * release.sh: likewise for .gmo generation

Fri Oct 29 16:51:03 EDT 1999 Ben Collins <bcollins@debian.org>
