@@ -1,3 +1,8 @@
+Fri Nov 19 15:04:10 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * `n' is also searchagain in dselect now
+  * Do searchagain if an empty searchstring is entered
+
 Thu Nov 18 10:27:35 EST 1999 Ben Collins <bcollins@debian.org>
 
   * utils/start-stop-daemon.c: Added ability for user.group arg to
